--- a/static/app.css
+++ b/static/app.css
@@ -8,3 +8,17 @@
     text-align: center;
     font: 2rem;
 }
+
+
+.tableText {
+    border: none;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.tableInput {
+    padding: 0;
+}
