--- a/templates/maps.html
+++ b/templates/maps.html
@@ -1,13 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/app.css">
-    <title>Route</title>
-  </head>
-  <body>
+{% extends 'base.html' %}
+{% block content %}
     <div class="container">
         <h1 class="text-center">
             Find route and time
@@ -22,7 +14,7 @@
                 <input type="text" class="form-control" placeholder="Origin" id="to">
             </div>
             <div class="form-group">
-                <button class="btn btn-info btn-lg">get directions</button>
+                <button class="btn btn-info btn-lg" onclick="calcRoute()">get directions</button>
             </div>
         </form>
         <div class="container-fluid">
@@ -34,11 +26,6 @@
             </div>
         </div>
     </div>
-    
     <script src="https://maps.googleapis.com/maps/api/js?key={{secret}}&libraries=places"></script>
-    <script src="/static/app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
-</html>
+    <script src="/static/maps.js"></script>
+{% endblock %}
