--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-  <div>
-    <h1>Start Planning Your Next Vacation!</h1>
-    <h3>Please Choose a Destination Below</h2>
-    <ul>
-      {% for destination in destinations %}
-          <li>
-              <h4 class="destName">{{ destination.name }}</h4>
-              <p class="destDesc">{{ destination.description }}</p>
-          </li>
-      {% endfor %}
-  </ul>
-  <a class="btn btn-small alert-danger" href="/route">Next</a>
-  <a class="btn btn-small" href="/itin">Iten</a>
-  </div>
+    <div class="container">
+        <h1>Welcome to Vacay Master</h1>
+        <p>Plan your dream vacation with ease.</p>
+        <p>Explore destinations, create itineraries, and more!</p>
+        <a class="btn btn-primary" href="/login">Login</a>
+        <a class="btn btn-primary" href="/signup">Register</a>
+    </div>
 {% endblock %}
