--- a/templates/posts.html
+++ b/templates/posts.html
@@ -15,9 +15,13 @@
                     <div class="card-body">
                         <h3 class="card-title">{{ post.title }}</h3>
                         <p class="card-text">{{ post.description }}</p>
-                        <form action="/delete_post/{{ post.post_id }}" method="post">
-                            <button type="submit" class="btn btn-danger">Delete Post</button>
-                        </form>
+                        
+                        {% if user_id == post.user_id %}
+                            <form action="/delete_post/{{ post.post_id }}" method="post">
+                                <button type="submit" class="btn btn-danger">Delete Post</button>
+                            </form>
+                        {% endif %}
+                        
                         <h4>Comments:</h4>
                         <ul>
                             {% for comment in comments if comment.post_id == post.post_id %}
@@ -34,3 +38,4 @@
         <a href="/dest" class="btn btn-primary">Go Back</a>
     </div>
 {% endblock %}
+
