--- a/static/home-logged.css
+++ b/static/home-logged.css
@@ -1,6 +1,11 @@
 body {
+    background-image: url("https://m.media-amazon.com/images/I/71lJW3BzRRL._AC_UF894,1000_QL80_.jpg");
     background-color: #fff2bd; /* Light yellow background */
     font-family: Arial, sans-serif;
+    margin-top: 70px;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 .container {
