--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,16 @@
         <ul>
             <a href="/">Home</a>
             {% if 'username' in session %}
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle">Other</a>
-                <ul class="dropdown-menu">
-                    <li><a href="/trips">My Trips</a></li>
-                    <li><a href="/route">Maps</a></li>
+                <div class="right-align">
                     <li><a href="/logout">Logout</a></li>
-                </ul>
-            </li>
+                    <li><a href="/route">Maps</a></li>
+                    <li><a href="/trips">My Trips</a></li>
+                </div>
             {% else %}
-            <li><a href="/login">Login</a></li>
-            <li><a href="/signup">Register</a></li>
+                <div class="right-align">
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/signup">Register</a></li>
+                </div>
             {% endif %}
         </ul>
     </nav>
