--- a/templates/itin.html
+++ b/templates/itin.html
@@ -14,10 +14,10 @@
             <th>{{ date }}</th>
             {% endfor %}
         </tr>
-        {% for hour in ['8:00 AM', '9:00 AM', '10:00 AM', '11:00 AM', '12:00 PM', '1:00 PM', '2:00 PM', '3:00 PM', '4:00 PM', '5:00 PM', '6:00 PM', '7:00 PM', '8:00 PM', '9:00 PM', '10:00 PM'] %}
+        {% for hour in [8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22] %}
         {% set outerloop = loop %}
         <tr class="table-row">
-            <td>{{ hour }}</td>
+            <td>{{ hour }}:00</td>
             {% for date in dates %}
                 <td class="table-input" row="{{ outerloop.index }}" col="{{ loop.index }}">
                     {% if date != '' and hour != '' %}
@@ -42,5 +42,3 @@
 <script src="/static/itinerary.js"></script>
 
 {% endblock %}
-
-
