fixed minor issues

--- a/templates/itin.html
+++ b/templates/itin.html
@@ -38,6 +38,7 @@
 <div class="text-center">
     <a href="/route" class="btn btn-primary">Go to Route</a>
 </div>
+<input type="hidden" id="tripId" value="{{ trip.trip_id }}">
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="/static/itinerary.js"></script>
 
